--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,181 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family=Inter:wght@300;400;500;600&display=swap");
+
 #app {
   max-width: 1280px;
   /* min-width: 500px; */
-  margin: 0 auto;
-  padding: 4px;
+  margin: 0;
   font-weight: normal;
+}
+
+* {
+  scroll-behavior: smooth;
+  font-family: "Inter", sans-serif;
+}
+
+body {
+  margin: 0;
+}
+
+/* ANIMATIONS */
+.loader {
+  border: 2px solid var(--primary);
+  position: relative;
+  border-radius: 50%;
+  border-top: 2px solid #fff;
+  width: 15px;
+  height: 15px;
+  animation: 0.4s spin linear infinite;
+  -webkit-animation: 0.4s spin linear infinite;
+  margin-left: 16px;
+}
+.loader.large {
+  margin-left: 8px;
+  width: 20px;
+  height: 20px;
+  border-width: 4px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate {
+  from {
+    transform: rotate(0);
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -ms-transform: rotate(0);
+    -o-transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+  }
+}
+.reveals {
+  animation: reveals 0.7s ease-in-out;
+  -webkit-animation: reveals 0.7s ease-in-out;
+}
+@keyframes reveals {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  60% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  80% {
+    opacity: 1;
+    transform: scale(0.9);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes hides {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(3);
+  }
+}
+
+.come-down {
+  animation: come-down 0.5s ease-in-out;
+  -webkit-animation: come-down 0.5s ease-in-out;
+}
+
+@keyframes come-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-100px);
+    -webkit-transform: translateY(-100px);
+    -moz-transform: translateY(-100px);
+    -ms-transform: translateY(-100px);
+    -o-transform: translateY(-100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+    -moz-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    -o-transform: translateY(0px);
+  }
+}
+
+.come-down-sm {
+  animation: come-down-sm 0.3s ease-in-out;
+  -webkit-animation: come-down-sm 0.3s ease-in-out;
+}
+
+@keyframes come-down-sm {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+    -webkit-transform: translateY(-20px);
+    -moz-transform: translateY(-20px);
+    -ms-transform: translateY(-20px);
+    -o-transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+    -webkit-transform: translateY(0px);
+    -moz-transform: translateY(0px);
+    -ms-transform: translateY(0px);
+    -o-transform: translateY(0px);
+  }
+}
+
+.come-up {
+  animation: come-up 0.3s ease-in-out;
+  -webkit-animation: come-up 0.3s ease-in-out;
+}
+
+.come-up-2 {
+  animation: come-up 0.6s ease-in-out;
+  -webkit-animation: come-up 0.6s ease-in-out;
+}
+
+.come-up-3 {
+  animation: come-up 0.9s ease-in-out;
+  -webkit-animation: come-up 0.9s ease-in-out;
+}
+
+.come-up-4 {
+  animation: come-up 1.2s ease-in-out;
+  -webkit-animation: come-up 1.2s ease-in-out;
+}
+
+@keyframes come-up {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+    -webkit-transform: translateY(20px);
+    -moz-transform: translateY(20px);
+    -ms-transform: translateY(20px);
+    -o-transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+  }
 }
